--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -13,7 +13,7 @@ const imageUrl = '/profile.jpeg'; // Path to your image in the public directory
 </div>
 
 <div class="flex flex-col items-center gap-y-4">
-  <h1 class="text-3xl font-bold">Lorem ipsum dolor</h1>
+  <h1 class="text-3xl font-bold">Nirmal H</h1>
   <a
     href=""
     class="border-input flex flex-row items-center gap-x-3 rounded-3xl
