--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,18 +18,65 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
+
   <body class="flex min-h-screen flex-col bg-black text-white">
     <main class="container mx-auto flex-grow px-40">
       <Header />
       <div class="flex w-full flex-col gap-y-10">
         <slot />
       </div>
+
+      <footer class="m-4 rounded-lg shadow dark:bg-gray-900">
+        <div class="mx-auto w-full max-w-screen-xl p-4 md:py-8">
+          <div class="sm:flex sm:items-center sm:justify-between">
+            <!-- <a
+              href="https://flowbite.com/"
+              class="mb-4 flex items-center space-x-3 sm:mb-0 rtl:space-x-reverse"
+            >
+              <img
+                src="https://flowbite.com/docs/images/logo.svg"
+                class="h-8"
+                alt="Flowbite Logo"
+              />
+              <span
+                class="self-center whitespace-nowrap text-2xl font-semibold dark:text-white"
+                >Flowbite</span
+              >
+            </a> -->
+            <ul
+              class="mb-6 flex flex-wrap items-center text-sm font-medium text-gray-500 dark:text-gray-400 sm:mb-0"
+            >
+              <li>
+                <a href="#" class="me-4 hover:underline md:me-6">About</a>
+              </li>
+              <li>
+                <a href="#" class="me-4 hover:underline md:me-6"
+                  >Privacy Policy</a
+                >
+              </li>
+              <li>
+                <a href="#" class="me-4 hover:underline md:me-6">Licensing</a>
+              </li>
+              <li>
+                <a href="#" class="hover:underline">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <hr
+            class="my-6 border-gray-200 dark:border-gray-700 sm:mx-auto lg:my-8"
+          />
+          <!-- <span
+            class="block text-sm text-gray-500 dark:text-gray-400 sm:text-center"
+            >© 2023 <a href="https://flowbite.com/" class="hover:underline"
+              >Flowbite™</a
+            >. All Rights Reserved.</span
+          > -->
+        </div>
+      </footer>
     </main>
-    <footer class="mx-auto md:flex-row md:gap-y-0 md:px-40">
-      <div class="container mx-auto text-center">
-        <p>&copy; 2024 My Portfolio. All rights reserved.</p>
-      </div>
-    </footer>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
+      defer></script>
   </body>
 </html>
 <style is:global>
