fix: pnpm cleaning/upgrade

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -68,7 +68,7 @@
   data-popover
   id="popover-job-portal"
   role="tooltip"
-  class="invisible absolute z-10 inline-block w-80 rounded-lg border border-gray-200 bg-white text-sm text-gray-500 opacity-0 shadow-sm transition-opacity duration-300 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400"
+  class="invisible absolute z-10 inline-block w-80 rounded-lg bg-gray-800 border-gray-600 bg-gray-800 text-gray-400 text-sm text-gray-500 opacity-0 shadow-sm transition-opacity duration-300 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400"
 >
   <div class="p-3">
     <div class="flex">
@@ -83,7 +83,7 @@
       </div>
       <div>
         <p
-          class="mb-1 text-base font-semibold leading-none text-gray-900 dark:text-white"
+          class="mb-1 text-base text-white font-semibold leading-none dark:text-white"
         >
           <a href="#" class="hover:underline">Job Training Portal</a>
         </p>
