--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 const title = 'resume';
 ---
 
-<header class="p-4">
+<header class='mb-12 flex w-full flex-wrap pb-3 text-sm sm:flex-nowrap sm:justify-start'>
   <nav class="container mx-auto flex items-center justify-between">
     <a href="/" class="text-xl font-bold">{title}</a>
     <ul class="flex space-x-4">
@@ -10,21 +10,6 @@ const title = 'resume';
       <li>
         <a href="/tools" class="hover:text-gray-400">Tools</a>
       </li>
-      <!-- <li>
-        <a href="/projects" class="hover:text-gray-400"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="h-6 w-6"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M9.528 1.718a.75.75 0 0 1 .162.819A8.97 8.97 0 0 0 9 6a9 9 0 0 0 9 9 8.97 8.97 0 0 0 3.463-.69.75.75 0 0 1 .981.98 10.503 10.503 0 0 1-9.694 6.46c-5.799 0-10.5-4.7-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 0 1 .818.162Z"
-              clip-rule="evenodd"></path>
-          </svg>
-        </a>
-      </li> -->
     </ul>
   </nav>
 </header>
