--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,8 +26,7 @@ const { title } = Astro.props;
         <slot />
       </div>
     </main>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
+    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
       defer></script>
   </body>
 </html>
