fix: Tailwind import base components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles.css'
+
 import Layout from '../layouts/Layout.astro';
 import Profile from '../components/Profile.astro';
 import Project from '../components/Project.astro';
